syntax = "proto3";
package proto;
option go_package = "./pb"; //Auction/grpc/proto

message Empty{} 

message Bidder{
    int32 bid = 1;
    int32 id = 2;
}

message BidResponse{
    string status = 1; //(FAIL; SUCCESS; EXCEPTION) //or int32
}

message ResultResponse{
    int32 highestBid = 1;
    bool itemSold = 2;
}
    

service AuctionService{
    rpc Bid (Bidder) returns (BidResponse) {};    
    rpc Result (Empty) returns (ResultResponse) {};
}


/*  FREEZER  */
/*
rpc SetLeader (Empty) returns (Empty) {};
rpc PublicLeader (Empty) returns (Empty) {};  // Notifies clients of the new leader
rpc SetSyncFollower (Empty) returns (Empty) {};
rpc PublishSyncFollower(Empty) returns (Empty) {};
rpc UpdateDatabase (Empty) returns (Empty) {};
*/